--- a/h618/zh/02-入门必读/03-功能测试.md
+++ b/h618/zh/02-入门必读/03-功能测试.md
@@ -20,11 +20,9 @@
 
 **K2C：100M网口**
 
-K2C无口灯
+K2C无网口灯
 
-
-
-可通过路由器后台、串口终端或串口终端查看板卡IP
+可通过路由器后台或串口终端查看板卡IP
 
 ![image-20250412164019949](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250412164019949.png)
 
