--- a/rk3576/zh/02-入门必读/03-功能测试.md
+++ b/rk3576/zh/02-入门必读/03-功能测试.md
@@ -179,15 +179,15 @@ KICKPI遥控器
 
 板载 8822CS 模块。
 
-![K7-8822CS](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250409115703655.png)
+![K7-8822CS](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250409115703655.png)
 
 **Debian 桌面**
 
-![image-20250421151111641](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250421151111641.png)
+![image-20250421151111641](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421151111641.png)
 
 输入密码。
 
-![image-20250421151235254](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250421151235254.png)
+![image-20250421151235254](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421151235254.png)
 
 
 
@@ -220,13 +220,13 @@ $ sudo rm -rf /etc/NetworkManager/system-connections/wifi_oranth_5G.nmconnection
 
 板载 8822CS 模块。
 
-![K7-8822CS](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250409115703655.png)
+![K7-8822CS](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250409115703655.png)
 
 
 
 Debian 桌面
 
-![image-20250421150613646](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250421150613646.png)
+![image-20250421150613646](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421150613646.png)
 
 
 
@@ -633,5 +633,4 @@ arm_release_ver: g13p0-01eac0, rk_so_ver: 10
 > 800x600 glmark2测试分数为  1405
 >
 > 测试结果仅做参考，实际分数以实际测量为准
-
 
