--- a/rk3576/zh/02-入门必读/04-扩展引脚.md
+++ b/rk3576/zh/02-入门必读/04-扩展引脚.md
@@ -34,7 +34,7 @@
 
 **K7引脚电压**
 
-![K7_PIN_DOMAIN](D:\Desktop\K7_PIN_DOMAIN.png)
+![K7_PIN_DOMAIN](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K7_PIN_DOMAIN.png)
 
 
 
