--- a/h618/zh/02-入门必读/01-网盘目录说明.md
+++ b/h618/zh/02-入门必读/01-网盘目录说明.md
@@ -11,32 +11,37 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 ## 目录说明
 
 ```
-├── 0-Specifications规格书
-├── 1-SDK软件源码
-│   ├── Android12.0
-│   └── Linux
-├── 2-Image镜像
+├── 0-Specifications
 │   ├── K2B
 │   └── K2C
-├── 3-SoftwareData软件资料
+├── 1-SDK
+│   ├── Android12.0
+│   └── Linux
+├── 2-Image
+│   ├── K2B
+│   └── K2C
+├── 3-SoftwareData
 │   ├── GPIO_tools
-│   ├── H618-Android12.0-APP签名文件.rar
-│   ├── Linux打包rootfs脚本
+│   ├── H618-Android12.0-APP_signature.rar
+│   ├── Linux_pack_rootfs_shell
 │   └── Qt_environment_installation
-├── 4-HardwareData硬件资料
-│   └── K2B
-└── 5-DevelopmentTools开发工具
-    ├── ADB Screen Cast 投屏
-    ├── ADB Tool
+├── 4-HardwareData
+│   ├── H618_Datasheet_V1.1.pdf
+│   ├── H618_User_Manual_V1.0.pdf
+│   ├── K2B
+│   └── K2C
+└── 5-DevelopmentTools
+    ├── ADB_Screen_Cast
+    ├── ADB_Tool
     ├── DragonSN-v2.7.5.rar
-    ├── FactoryTool 工厂镜像烧录工具
+    ├── FactoryTool
     ├── HDTunePro_6.00_trial.exe
-    ├── SD Boot Card Tool启动卡工具
-    ├── SD card burning tool 卡烧录工具
+    ├── SD_Boot_Card_Tool
+    ├── SD_card_burning_tool
     ├── SD Card Formatter 5.0.2 Setup EN.exe
     ├── SDCardFormatterv5_WinEN
-    ├── UART DebugTool 串口调试工具          
-    └── USB ImageBurnTool 镜像烧录工具
+    ├── UART_DebugTool
+    └── USB_ImageBurnTool
 ```
 
 
@@ -51,15 +56,11 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 1-SDK软件源码
 
-RK3576 SDK暂不开放
-
 功能定制请联系技术支持
 
 
 
 2-Image镜像
-
-支持 Android12 / Ubuntu22.04系统镜像
 
 通过烧录镜像更新主板的系统，说明见镜像烧录章节
 
@@ -80,5 +81,4 @@ RK3576 SDK暂不开放
 5-DevelopmentTool开发工具
 
 烧录调试相关工具，如烧录软件、ADB软件等。
-
 
