--- a/h618/zh/03-镜像烧录/01-SD卡烧录.md
+++ b/h618/zh/03-镜像烧录/01-SD卡烧录.md
@@ -22,7 +22,7 @@
 
 PhoenixCard.rar 直接解压后打开即可，打开界面如下
 
-![image-20240718145035150](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240718145035150.png)
+![image-20250509185807163](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509185807163.png)
 
 
 
@@ -39,7 +39,7 @@ PhoenixCard.rar 直接解压后打开即可，打开界面如下
 1. 插入SD卡到电脑
 2. 按照以下步骤操作烧录工具
 
-![image-20240718145612214](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240718145612214.png)
+![image-20250509190012699](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509190012699.png)
 
 插入烧录好的SD卡到开发板，上电启动即可自动
 
@@ -51,7 +51,7 @@ PhoenixCard.rar 直接解压后打开即可，打开界面如下
 
 3.烧卡
 
-![image-20250303140114424](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250303140114424.png)
+![image-20250509190047639](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509190047639.png)
 
 插入烧录好的SD量产卡到开发板，上电启动即可自动开启烧录
 
@@ -74,7 +74,7 @@ SD卡传输速度会影响开发板加载系统的时间
 SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或自行从网络下载均可
 
 ```
-5-DevelopmentTools开发工具\SD卡烧录工具\balenaEtcher.exe
+h618_data\5-DevelopmentTools\SD_card_burning_tool\balenaEtcher-1.19.3.Setup.exe
 ```
 
 
@@ -84,7 +84,7 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 镜像可从网盘以下目录获取
 
 ```
-└── 2-Image镜像
+└── 2-Image
     └── K2B
        	└── Ubuntu2204-SDCARD
 ```
@@ -95,17 +95,17 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 
 使用balenaEtcher烧录Linux镜像的具体步骤如下所示
 
-![image-20250217140243507](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140243507.png)
+![image-20250509190242824](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509190242824.png)
 
 1. 首先选择要烧录的Linux镜像文件的路径
 2. 然后选择SD卡的盘符
 3. 最后点击现在烧录就会开始烧录Linux镜像到SD卡中
 
-![image-20250217140325269](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140325269.png)
+![image-20250509190412203](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509190412203.png)
 
 等待烧录完成
 
-![image-20250217141221880](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217141221880.png)
+![image-20250509191546115](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509191546115.png)
 
 
 
