--- a/rk3576/zh/02-入门必读/02-快速使用.md
+++ b/rk3576/zh/02-入门必读/02-快速使用.md
@@ -162,185 +162,13 @@ MIPI 屏排线连接时，需确保蓝色面朝上，白色面朝下，然后接
 
 ## ADB
 
-ADB（Android Debug Bridge）是安卓开发调试桥接工具，支持通过 USB 或网络连接设备，可实现应用安装、文件传输、命令执行等设备管理与调试操作。
-
-
-
-### 调试线与接口
-
-- 调试线：使用 USB TYPE - C 数据线。
-- 调试接口：主板的 USB TYPE - C 接口。
-
-
-
-### **ADB 工具获取与安装**
-
-**工具获取**
-
-ADB软件工具从KICKPI网盘中获取，Windows平台使用，位于网盘目录
-
-```
-5-DevelopmentTool\ADB Tool\adb-tools.rar
-```
-
-**安装步骤**
-
-1. 解压 `adb - tools.rar` 压缩包，如解压到 `D:\ADB Tool\adb - tools` 路径。
-2. 打开命令行窗口，切换到解压目录：
-
-```
-ADB$ cd D:\ADB Tool\adb-tools
-```
-3. 运行命令，运行成功代表安装成功
-
-```
-ADB$ adb --version
-```
-
-示例：
-
-```
-PS D:\ADB Tool\adb-tools> .\adb.exe --version
-Android Debug Bridge version 1.0.40
-Version 4797878
-Installed as D:\ADB Tool\adb-tools\adb.exe
-```
-
-
-
-### **ADB 检测设备**
-
-1. 使用 TYPE - C 数据线将电脑和主板连接起来。
-2. 打开命令行窗口，切换到 ADB 工具解压目录，运行以下命令，若接入成功，可检测到对应 device：
-
-```
-ADB$ adb devices
-```
-
-示例：
-
-```
-PS D:\ADB Tool\adb-tools> .\adb.exe devices
-List of devices attached
-5d5543a9bcc93eec        device
-```
-
-
-
-### **ADB 功能使用**
-
-关于 ADB 功能的其他使用方法，请参考[ADB功能使用](../08-进阶/ADB功能使用.md)。
-
-
-
-## **用户及密码**
-
-### 用户信息
-
-不同系统的默认用户名和密码如下：
-
-| 系统   | 用户名 | 密码   |
-| ------ | ------ | ------ |
-| Debian | linaro | linaro |
-| Debian | root   | root   |
-| Ubuntu | kickpi | kickpi |
-| Ubuntu | root   | root   |
-
-
-
-### 修改用户密码
-
-```
-console$ passwd $username
-```
-
-示例：
-
-```
-root@kickpi:/# passwd kickpi
-New password:
-Retype new password:
-passwd: password updated successfully
-```
+K7 支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
 
 
 
 ## SSH
 
-### 支持平台
-
-Debian / Ubuntu
-
-
-
-### **连接SSH**
-
-在命令行中输入以下命令进行 SSH 连接：
-
-```bash
-$ ssh <username>@<IP>
-```
-
-**注意事项**
-
-- 确保主板网络连接正常。
-- 确保电脑能够正常 ping 通主板的 IP 地址。
-- 确保输入的用户名和密码存在且正确。
-
-
-
-示例：
-
-```
-PS C:\Users\16708> ssh kickpi@192.168.77.186
-The authenticity of host '192.168.77.186 (192.168.77.186)' can't be established.
-ED25519 key fingerprint is SHA256:635IZrLQdeYlWWl3SCdLxu9fxLEPmStBapj4APCjzZE.
-This key is not known by any other names.
-Are you sure you want to continue connecting (yes/no/[fingerprint])? yes
-Warning: Permanently added '192.168.77.186' (ED25519) to the list of known hosts.
-kickpi@192.168.77.186's password:
-Welcome to Ubuntu 24.04.2 LTS (GNU/Linux 6.1.75 aarch64)
-
- * Documentation:  https://help.ubuntu.com
- * Management:     https://landscape.canonical.com
- * Support:        https://ubuntu.com/pro
-
-This system has been minimized by removing packages and content that are
-not required on a system that users do not log into.
-
-To restore this content, you can run the 'unminimize' command.
-To run a command as administrator (user "root"), use "sudo <command>".
-See "man sudo_root" for details.
-
-kickpi@kickpi:~$
-```
-
-
-
-**root用户登陆配置**
-
-默认情况下，不支持 root 用户通过 SSH 登陆，若需要使用 root 用户登陆，需修改 SSH 配置文件：
-
-```bash
-console$ vim /etc/ssh/ssh_config
-+ PermitRootLogin yes
-console$ vim /etc/ssh/sshd_config
-+ PermitRootLogin yes
-console$ sudo /etc/init.d/ssh restart
-```
-
-
-
-**确认配置是否成功**
-
-运行以下命令，若输出结果为 `PermitRootLogin yes`，则表示配置成功：
-
-```
-console$ cat /etc/ssh/ssh_config | grep PermitRootLogin
-PermitRootLogin yes
-console$ cat /etc/ssh/sshd_config | grep PermitRootLogin
-PermitRootLogin yes
-```
+K7 支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
 
 
 
@@ -371,27 +199,6 @@ PermitRootLogin yes
 使用 Mobaxterm 软件或其他串口工具连接串口时，发现串口乱码，或者只能显示无法写入问题。
 
 **解决方案**：一般为调试串口工具不支持 1500000 波特率，建议使用支持 1500000 波特率的调试串口工具。
-
-
-
-### **用户名密码错误问题**
-
-使用 ssh 登陆时，密码错误。
-
-**解决方案**：请确认相关账号是否存在，以及密码是否正确。可使用以下命令修改用户密码：
-
-```
-console$ passwd $username
-```
-
-示例：
-
-```
-root@kickpi:/# passwd kickpi
-New password:
-Retype new password:
-passwd: password updated successfully
-```
 
 
 
