--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -96,7 +96,7 @@ K2B 支持DC 12V 供电，如下图所示：
 
 串口助手软件 可自行下载，下面以Mobaxterm为例
 
-网盘路径：5-DevelopmentTools开发工具\UART DebugTool 串口调试工具
+网盘路径：h618_data\5-DevelopmentTools\UART_DebugTool\MobaXterm_Portable_v20.3.zip
 
 软件官网下载：https://mobaxterm.mobatek.net/
 
