--- a/h618/zh/02-入门必读/02-快速使用.md
+++ b/h618/zh/02-入门必读/02-快速使用.md
@@ -96,7 +96,11 @@ K2B 支持DC 12V 供电，如下图所示：
 
 串口助手软件 可自行下载，下面以Mobaxterm为例
 
-网盘路径：h618_data\5-DevelopmentTools\UART_DebugTool\MobaXterm_Portable_v20.3.zip
+网盘路径：
+
+``` 
+h618_data\5-DevelopmentTools\UART_DebugTool\MobaXterm_Portable_v20.3.zip
+```
 
 软件官网下载：https://mobaxterm.mobatek.net/
 
@@ -136,7 +140,7 @@ ADB（Android Debug Bridge）是安卓系统开发调试桥接工具，支持通
 ADB软件工具从KICKPI网盘中获取，Windows平台使用，位于网盘目录
 
 ``` 
-5-DevelopmentTool\ADB Tool\adb-tools.rar
+h618_data\5-DevelopmentTools\ADB_Tool\adb-tools.rar
 ```
 
 
