--- a/h618/zh/02-入门必读/03-功能测试.md
+++ b/h618/zh/02-入门必读/03-功能测试.md
@@ -315,9 +315,9 @@ nameserver 8.8.4.4
 
 **Ubuntu**
 
-未配置
+按下USER按键打开Log out界面
 
-
+![image-20250512100543793](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512100543793.png)
 
 ## RS485/232
 
