--- a/rk3576/zh/02-入门必读/03-功能测试.md
+++ b/rk3576/zh/02-入门必读/03-功能测试.md
@@ -600,7 +600,7 @@ console$ cat /sys/devices/platform/*gpu/utilisation
 
 **GLmark2 性能测试**
 
-Rockchip 提供 npu 测试脚本
+Rockchip 提供 gpu 测试脚本
 
 ```
 console$ ls /rockchip-test/gpu
