--- a/rk356x/zh/02-入门必读/02-K1-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K1-快速使用.md
@@ -59,13 +59,15 @@ K1主板拥有的显示接口，可以在[K1硬件介绍](../01-主板介绍/02-
 
 K1默认适配LVDS7寸屏
 
-
-
 * 接线方式:
 
-LVDS/MIPI0接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#翻盖式下接FPC接口)
+LVDS/MIPI 0接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
 
+![image-20250512100410963](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512100410963.png)
 
+LVDS/MIPI 1接口: [抽拉式上接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-2)
+
+![image-20250512100640644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512100640644.png)
 
 ### DUAL LVDS屏硬件接线
 
