--- a/rk356x/zh/02-入门必读/02-K1B-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K1B-快速使用.md
@@ -1,10 +1,16 @@
 # 02-快速使用
 
-SDK - 下文指代源码路径
+本指南旨在帮助用户快速上手使用主板，包含板卡上电、显示屏连接、调试串口、ADB 、SSH 连接等内容。
 
-console - 下文指代主板调试命令控制台
 
-ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
+
+## 符号说明
+
+* `SDK$`：指代源码路径
+
+* `console$`：泛指主板的命令行控制台。[主板命令行控制台](#console_readme)
+
+* `ADB$`：Android Debug Bridge 命令行工具，泛指可运行 ADB 的环境
 
 
 
