--- a/rk356x/zh/02-入门必读/02-K1B-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K1B-快速使用.md
@@ -20,14 +20,6 @@
 
 ### **供电方式**
 
-K1仅支持12V供电，供电方式为DC12V座子，通过接入12V电源设配器给主板供电。
-
-* 实际接线图
-
-![image-20250416190745103](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250416190745103.png)
-
-
-
 K1B供电电压为5V，支持两种供电方式，分别是TYPE-C、扩展引脚
 
 * TYPE-C口（推荐）
@@ -46,21 +38,24 @@ K1B供电电压为5V，支持两种供电方式，分别是TYPE-C、扩展引脚
 
 ![image-20250421103741365](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421103741365.png)
 
-### K3
-
-K1仅支持12V供电，供电方式为DC12V座子，通过接入12V电源设配器给主板供电。
-
-![image-20250417192155136](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250417192155136.png)
-
-
-
 ### LED指示灯
 
-开发板配备2个LED，绿色LED为电源指示灯，上电默认长亮
+开发板配备2个LED：
+
+绿色LED为电源指示灯，上电默认长亮
 
 蓝色LED为系统工作心跳灯。若心跳灯持续闪烁，则表示内核正常运行。
 
 另外，系统工作心跳灯可参考以下方面控制LED作为其他功能。
+
+
+
+### **上电步骤**
+
+1. 插上 DC12V 电源圆形输出接口，给板卡上电。
+2. 通过两个 LED 灯的状态，初步判断开发板运行状态：
+   - 电源指示灯上电即长亮。若不亮，则检查电源部分是否异常。
+   - 心跳灯内核启动后持续闪烁。若不闪烁，则系统运行可能异常。
 
 
 
