--- a/rk356x/zh/02-入门必读/02-K1B-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K1B-快速使用.md
@@ -61,69 +61,13 @@ K1B供电电压为5V，支持两种供电方式，分别是TYPE-C、扩展引脚
 
 ## 显示屏
 
-RK356x系列主板均含两种或两种以上显示接口，可以根据需要**选择性**连接显示屏外设。RK356x系列主板详细接口，请前往**主板介绍**部分对应查看主板接口位置和可接屏幕类型。下面介绍的KICKPI出售的各类型屏幕及各类型接口接线介绍。
+K1B 主板拥有的显示接口，可以在[K1B硬件介绍](../01-主板介绍/02-KICKPI-K1B硬件介绍.md#display)章节查看接口数量和默认适配显示屏类型，可以根据需要选择性连接显示屏外设。
 
-* MIPI-DSI
+**KICKPI 开发板显示屏接口均搭配对应屏的转接板使用，购买屏会配置接好发货哈**
 
-| **MIPI Panel Model** | **Diagonal Size** | **Resolution** |
-| -------------------- | ----------------- | -------------- |
-| AT101DS40I           | 10.1-inch         | 800x1280       |
-| MX101BA1340          | 10.1-inch         | 800x1280       |
-| MX080B2140           | 8.0-inch          | 800x1280       |
-| F050008M01           | 5.0-inch          | 720x1280       |
+### LVDS/MIPI
 
-* LVDS
-
-| **LVDS Panel Model** | **Diagonal Size** | **Resolution** |
-| -------------------- | ----------------- | -------------- |
-| GG070D1              | 7-inch            | 1024x600       |
-| MX070IBC             | 7-inch            | 1024x600       |
-
-* EDP
-
-| **EDP Panel Model** | **Diagonal Size** | **Resolution** |
-| ------------------- | ----------------- | -------------- |
-| LQ156T3LW03         | 15.6-inch         | 1920x1080      |
-
-
-
-**硬件接线**
-
-PS：接入所有**FPC接口**的屏幕（外设）前，主板必须先**断电！！！**
-
-* 翻盖式FPC接口
-
-排线连接处：蓝色支撑板朝上，白色金属面朝下，接入FPC接口。
-
-![image-20250421112237616](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112237616.png)
-
-![image-20250421112308072](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112308072.png)
-
-* 抽拉式FPC接口
-
-排线连接处：白色金属面朝上，蓝色支撑板朝下，接入FPC接口。
-
-![image-20250421112535444](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112535444.png)
-
-![image-20250421112559949](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112559949.png)
-
-
-
-### DUAL LVDS屏硬件接线
-
-KICKPI K3支持一路Dual LVDS屏，采用CS5518芯片实现MIPI 转Dual LVDS功能
-
-> PS：Dual LVDS屏 与 MIPI/LVDS屏 互为复用，只能二选一
-
-
-
-**K3 Dual LVDS接口说明**
-
-![image-20240517143001898](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240517143001898.png) 
-
->  LVDS供电电压可选3.3V、5V、12V，必须根据规格书选择对应电压，否则会不能点亮或烧屏
-
-
+K1默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
 
 ### eDP屏硬件接线
 
