--- a/rk356x/zh/02-入门必读/02-K1B-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K1B-快速使用.md
@@ -67,7 +67,9 @@ K1B 主板拥有的显示接口，可以在[K1B硬件介绍](../01-主板介绍/
 
 ### LVDS/MIPI
 
-K1默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
+K1B 默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
+
+
 
 ### eDP屏硬件接线
 
