--- a/rk356x/zh/02-入门必读/02-K1B-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K1B-快速使用.md
@@ -69,31 +69,9 @@ K1B 主板拥有的显示接口，可以在[K1B硬件介绍](../01-主板介绍/
 
 K1B 默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
 
-LVDS/MIPI 0接口：
+LVDS/MIPI 0接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
 
 ![image-20250512140834526](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512140834526.png)
-
-### eDP屏硬件接线
-
-**排线要求**
-
-引脚数30Pin、排线方向为同向
-
-> 建议使用随屏附赠排线，否则有可能会导致屏幕损坏
-
-
-
-**接线示例图**
-
-![image-20231021171209133](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021171209133.png)
-
-
-
-![image-20231215152730038](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231215152730038.png)
-
-> 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
->
-> EDP屏 必须在屏端额外接12V电源
 
 
 
