--- a/h618/zh/02-入门必读/03-功能测试.md
+++ b/h618/zh/02-入门必读/03-功能测试.md
@@ -351,7 +351,7 @@ cat /dev/ttyAS3
 
 ## 常见问题
 
-有线网口使用使用局域网，WiFi连接网络时无法访问外网
+有线网口使用局域网，WiFi连接网络时无法访问外网
 
 ![image-20250427165431777](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427165431777.png)
 
