--- a/rk356x/zh/02-入门必读/02-K1B-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K1B-快速使用.md
@@ -349,3 +349,27 @@ passwd: password updated successfully
 
 
 
+### 什么是主板命令行控制台？<a id="console_readme"> </a>
+
+命令行控制台，文档中泛指可以通过文本命令与计算机系统交互的操作界面。用户通过输入特定指令来执行操作（如文件管理、程序运行、系统配置等），而非依赖图形化界面（GUI）的鼠标点击和可视化操作。
+
+命令行控制台举例：
+
+Android 系统，可以使用串口或adb shell，使用命令行控制台。
+
+```
+console$
+```
+
+Debian 系统，可以使用串口或者adb shell，ssh等方式，使用命令行控制台。
+
+```
+root@linaro$
+```
+
+Ubuntu 系统，可以使用串口或者adb shell，ssh等方式，使用命令行控制台。
+
+```
+kickpi@kickpi$
+```
+
