--- a/rk356x/zh/02-入门必读/02-K3-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K3-快速使用.md
@@ -242,126 +242,15 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 
-## SSH
-
-平台支持：Debian / Ubuntu
-
-**使用示例**
-
-```bash
-$ ssh <username>@<IP>
-```
-
-> <username>：板子用户名，即kickpi
->
-> <IP>：板子的网络IP
-
-注意事项
-
-* 确保板子网络正常
-
-* 确保能正常ping通板子的IP
-
-* 确保输入的用户名和密码存在及正确
-
-
-
-**root用户登陆配置**
-
-默认不支持root用户ssh登陆，需要修改ssh配置文件
-
-```bash
-(console)$ vim /etc/ssh/ssh_config
-+ PermitRootLogin yes
-(console)$ vim /etc/ssh/sshd_config
-+ PermitRootLogin yes
-(console)$ sudo /etc/init.d/ssh restart
-```
-
-> 确认配置是否成功
->
-> ```
-> (console)$ cat /etc/ssh/ssh_config | grep PermitRootLogin
-> PermitRootLogin yes
-> (console)$ cat /etc/ssh/sshd_config | grep PermitRootLogin
-> PermitRootLogin yes
-> ```
-
-
-
 ## ADB
 
-Android 调试桥 (`adb`) 是一种功能多样的命令行工具，可让您与设备进行通信。`adb` 命令可用于执行各种设备操作，例如安装和调试应用。目前RK356x 只有Android系统和DEBIAN系统支持**USB-ADB调试**
+K3 支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
 
 
 
-### 调试线与接口
+## SSH
 
-- 调试线：使用 USB TYPE - C 数据线。
-- 调试接口：主板的 USB TYPE - C 接口。
-
-
-
-### **ADB 工具获取与安装**
-
-**工具获取**
-
-ADB软件工具从KICKPI网盘中获取，Windows平台使用，位于网盘目录
-
-```
-5-DevelopmentTool\ADB Tool\adb-tools.rar
-```
-
-**安装步骤**
-
-1. 解压 `adb - tools.rar` 压缩包，如解压到 `D:\ADB Tool\adb - tools` 路径。
-2. 打开命令行窗口，切换到解压目录：
-
-```
-ADB$ cd D:\ADB Tool\adb-tools
-```
-
-3. 运行命令，运行成功代表安装成功
-
-```
-ADB$ adb --version
-```
-
-示例：
-
-```
-PS D:\ADB Tool\adb-tools> .\adb.exe --version
-Android Debug Bridge version 1.0.40
-Version 4797878
-Installed as D:\ADB Tool\adb-tools\adb.exe
-```
-
-
-
-### **ADB 检测设备**
-
-1. 使用 TYPE - C 数据线将电脑和主板连接起来。
-2. 打开命令行窗口，切换到 ADB 工具解压目录，运行以下命令，若接入成功，可检测到对应 device：
-
-```
-ADB$ adb devices
-```
-
-示例：
-
-```
-PS D:\ADB Tool\adb-tools> .\adb.exe devices
-List of devices attached
-5d5543a9bcc93eec        device
-```
-
-
-
-### **ADB 功能使用**
-
-关于 ADB 功能的其他使用方法，请参考[ADB功能使用](../08-进阶/ADB功能使用.md)。
-
-
+K3 支持SSH功能使用，详见 [SSH](../../../common/zh/linux/SSH.md)。
 
 
 
