--- a/rk356x/zh/02-入门必读/02-K3-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K3-快速使用.md
@@ -244,7 +244,7 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 ## ADB
 
-K3 支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
+K3 Android/Debian系统，支持ADB功能使用，详见 [ADB教程](../../../common/zh/adb/ADB教程.md)。
 
 
 
