--- a/rk356x/zh/02-入门必读/02-K3-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K3-快速使用.md
@@ -49,55 +49,9 @@ K3 仅支持12V供电，供电方式为DC12V座子，通过接入12V电源设配
 
 ## 显示屏
 
-RK356x系列主板均含两种或两种以上显示接口，可以根据需要**选择性**连接显示屏外设。RK356x系列主板详细接口，请前往**主板介绍**部分对应查看主板接口位置和可接屏幕类型。下面介绍的KICKPI出售的各类型屏幕及各类型接口接线介绍。
-
-* MIPI-DSI
-
-| **MIPI Panel Model** | **Diagonal Size** | **Resolution** |
-| -------------------- | ----------------- | -------------- |
-| AT101DS40I           | 10.1-inch         | 800x1280       |
-| MX101BA1340          | 10.1-inch         | 800x1280       |
-| MX080B2140           | 8.0-inch          | 800x1280       |
-| F050008M01           | 5.0-inch          | 720x1280       |
-
-* LVDS
-
-| **LVDS Panel Model** | **Diagonal Size** | **Resolution** |
-| -------------------- | ----------------- | -------------- |
-| GG070D1              | 7-inch            | 1024x600       |
-| MX070IBC             | 7-inch            | 1024x600       |
-
-* EDP
-
-| **EDP Panel Model** | **Diagonal Size** | **Resolution** |
-| ------------------- | ----------------- | -------------- |
-| LQ156T3LW03         | 15.6-inch         | 1920x1080      |
 
 
-
-**硬件接线**
-
-PS：接入所有**FPC接口**的屏幕（外设）前，主板必须先**断电！！！**
-
-* 翻盖式FPC接口
-
-排线连接处：蓝色支撑板朝上，白色金属面朝下，接入FPC接口。
-
-![image-20250421112237616](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112237616.png)
-
-![image-20250421112308072](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112308072.png)
-
-* 抽拉式FPC接口
-
-排线连接处：白色金属面朝上，蓝色支撑板朝下，接入FPC接口。
-
-![image-20250421112535444](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112535444.png)
-
-![image-20250421112559949](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250421112559949.png)
-
-
-
-**Dual LVDS接口说明**
+### Dual LVDS
 
 1. Dual LVDS数据接口
 2. LVDS供电电压选择，可选3.3V、5V、12V，必须根据规格书选择对应电压，否则会不能点亮或烧屏
