--- a/rk356x/zh/02-入门必读/02-K3-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K3-快速使用.md
@@ -49,7 +49,13 @@ K3 仅支持12V供电，供电方式为DC12V座子，通过接入12V电源设配
 
 ## 显示屏
 
+**KICKPI 开发板显示屏接口均搭配对应屏的转接板使用，购买屏会配置接好发货哈**
 
+### LVDS/MIPI
+
+K1B 默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
+
+LVDS/MIPI 0接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
 
 ### Dual LVDS
 
