--- a/rk356x/zh/02-入门必读/02-K3-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K3-快速使用.md
@@ -49,6 +49,8 @@ K3 仅支持12V供电，供电方式为DC12V座子，通过接入12V电源设配
 
 ## 显示屏
 
+K3 主板拥有的显示接口，可以在[K3硬件介绍](../01-主板介绍/04-KICKPI-K3硬件介绍.md#display)章节查看接口数量和默认适配显示屏类型，可以根据需要选择性连接显示屏外设。
+
 **KICKPI 开发板显示屏接口均搭配对应屏的转接板使用，购买屏会配置接好发货哈**
 
 ### LVDS/MIPI
