--- a/rk356x/zh/02-入门必读/02-K3-快速使用.md
+++ b/rk356x/zh/02-入门必读/02-K3-快速使用.md
@@ -55,9 +55,9 @@ K3 主板拥有的显示接口，可以在[K3硬件介绍](../01-主板介绍/04
 
 ### LVDS/MIPI
 
-K1B 默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
+K3 默认适配KICKPI 售卖的 LVDS7寸屏 MIPI 5寸、8寸、10.1寸等屏
 
-LVDS/MIPI 0接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
+LVDS/MIPI 接口: [翻盖式下接FPC接口](../../../common/zh/display/FPC接口介绍#FPC-1)
 
 ### Dual LVDS
 
