--- a/rk356x/zh/02-入门必读/03-功能测试.md
+++ b/rk356x/zh/02-入门必读/03-功能测试.md
@@ -853,7 +853,12 @@ $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 
 ## KEY测试<a id="KEYtest"> </a>
 
+Android系统
 
+操作方式：
+
+1. 点击"音量+"按钮，显示画面右侧出现音量进度条
+2. 点击"重启"按钮，系统重新开机
 
 
 
