--- a/rk356x/zh/02-入门必读/03-功能测试.md
+++ b/rk356x/zh/02-入门必读/03-功能测试.md
@@ -853,12 +853,13 @@ $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 
 ## KEY测试<a id="KEYtest"> </a>
 
-Android系统
+### Android系统
 
-操作方式：
+点击"loader"按钮，Android系统中配置为”音量+“，显示画面右侧出现音量进度条
 
-1. 点击"音量+"按钮，显示画面右侧出现音量进度条
-2. 点击"重启"按钮，系统重新开机
+点击"power"按钮，系统休眠/唤醒
+
+点击"重启"按钮，系统重新开机
 
 
 
