--- a/rk356x/zh/02-入门必读/03-功能测试.md
+++ b/rk356x/zh/02-入门必读/03-功能测试.md
@@ -841,11 +841,9 @@ $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 
 适用平台：全平台
 
+### Android系统
 
-
-### iperf测试方法
-
-待完善
+连接上可以正常使用的网线，Android系统界面右上角会弹出有线网络标志
 
 
 
