--- a/rk356x/zh/02-入门必读/03-功能测试.md
+++ b/rk356x/zh/02-入门必读/03-功能测试.md
@@ -843,7 +843,15 @@ $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 
 ### Android系统
 
-连接上可以正常使用的网线，Android系统界面右上角会弹出有线网络标志
+连接上可以正常使用的网线，Android系统界面会出现有线网络标志
+
+![image-20250512151221225](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512151221225.png)
+
+浏览器访问网页正常
+
+![image-20250512151504759](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250512151504759.png)
+
+### Linux系统
 
 
 
