--- a/rk3576/zh/02-入门必读/01-网盘目录说明.md
+++ b/rk3576/zh/02-入门必读/01-网盘目录说明.md
@@ -43,13 +43,13 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 ## 目录说明
 
-0-Specifications
+**0-Specifications**
 
 通过规格书可以快速了解产品的特性和性能。
 
 
 
-1-SDK
+**1-SDK**
 
 RK3576 SDK暂不开放
 
@@ -57,7 +57,7 @@ RK3576 SDK暂不开放
 
 
 
-2-Image
+**2-Image**
 
 支持 Android14 / Debian12 / Ubuntu2404 系统镜像
 
@@ -65,19 +65,19 @@ RK3576 SDK暂不开放
 
 
 
-3-SoftwareData
+**3-SoftwareData**
 
 软件相关的资料，如程序例子、软件补丁等。
 
 
 
-4-HardwareData
+**4-HardwareData**
 
 硬件相关的资料，如原理图等。
 
 
 
-5-DevelopmentTool
+**5-DevelopmentTool**
 
 烧录调试相关工具，如烧录软件、ADB软件等。
 
