--- a/h618/zh/03-镜像烧录/01-SD卡烧录.md
+++ b/h618/zh/03-镜像烧录/01-SD卡烧录.md
@@ -12,9 +12,9 @@
 
 > 软件工具可从网盘下载
 >
-> 烧录工具 PhoenixCard 在 <5-DevelopmentTools开发工具\SD启动卡工具\PhoenixCard.rar>
+> 烧录工具 PhoenixCard 在 5-DevelopmentTools\SD_Boot_Card_Tool\PhoenixCard4.2.8.rar
 >
-> Android镜像 在 <2-Image镜像\K2B\Android12.0 TV>
+> Android镜像 在 2-Image\K2\*\\Android12.0_\*
 
 
 
