--- a/h618/zh/03-镜像烧录/01-SD卡烧录.md
+++ b/h618/zh/03-镜像烧录/01-SD卡烧录.md
@@ -74,7 +74,7 @@ SD卡传输速度会影响开发板加载系统的时间
 SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或自行从网络下载均可
 
 ```
-h618_data\5-DevelopmentTools\SD_card_burning_tool\balenaEtcher-1.19.3.Setup.exe
+5-DevelopmentTools\SD_card_burning_tool\balenaEtcher-1.19.3.Setup.exe
 ```
 
 
