--- a/h618/zh/03-镜像烧录/01-SD卡烧录.md
+++ b/h618/zh/03-镜像烧录/01-SD卡烧录.md
@@ -84,9 +84,7 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 镜像可从网盘以下目录获取
 
 ```
-└── 2-Image
-    └── K2B
-       	└── Ubuntu2204-SDCARD
+h618_data\2-Image\K2*\Ubuntu2204_*
 ```
 
 
