--- a/h618/zh/03-镜像烧录/01-SD卡烧录.md
+++ b/h618/zh/03-镜像烧录/01-SD卡烧录.md
@@ -55,7 +55,7 @@ PhoenixCard.rar 直接解压后打开即可，打开界面如下
 
 插入烧录好的SD量产卡到开发板，上电启动即可自动开启烧录
 
-K2B安卓系统，使用SD量产卡烧录完成后系统电源灯会熄灭。
+安卓系统，使用SD量产卡烧录完成后系统电源灯会熄灭。
 
 ## 2. Ubuntu镜像SD卡 镜像烧录
 
