--- a/h618/en/02-Getting Started Guide/01-网盘目录说明.md
+++ b/h618/en/02-Getting Started Guide/01-网盘目录说明.md
@@ -26,8 +26,6 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 │   ├── Linux_pack_rootfs_shell
 │   └── Qt_environment_installation
 ├── 4-HardwareData
-│   ├── H618_Datasheet_V1.1.pdf
-│   ├── H618_User_Manual_V1.0.pdf
 │   ├── K2B
 │   └── K2C
 └── 5-DevelopmentTools
@@ -48,37 +46,39 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 ## 内容说明
 
-0-Specifications规格书
+0-Specifications
 
 通过规格书可以快速了解产品的特性和性能。
 
 
 
-1-SDK软件源码
+1-SDK
+
+软件源码
 
 功能定制请联系技术支持
 
 
 
-2-Image镜像
+2-Image
 
 通过烧录镜像更新主板的系统，说明见镜像烧录章节
 
 
 
-3-SoftwareData软件资料
+3-SoftwareData
 
 软件相关的资料，如程序例子、软件补丁等。
 
 
 
-4-HardwareData硬件资料
+4-HardwareData
 
 硬件相关的资料，如原理图等。
 
 
 
-5-DevelopmentTool开发工具
+5-DevelopmentTool
 
 烧录调试相关工具，如烧录软件、ADB软件等。
 
