--- a/h618/en/02-Getting Started Guide/01-网盘目录说明.md
+++ b/h618/en/02-Getting Started Guide/01-网盘目录说明.md
@@ -1,12 +1,10 @@
-# 01-网盘目录说明
+# 01-Cloud Storage Directory Guide
 
-KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDrive网盘。
+KICKPI development resources are distributed via cloud storage, supporting both Baidu Netdisk and OneDrive.  
+The contents of both cloud storage platforms are identical. Choose based on your network conditions.  
+Cloud storage links can be obtained through the purchase platform or by contacting customer service via QQ.
 
-两份网盘资料内容一致，可根据实际情况自行选择。
-
-网盘链接可通过 购买平台或QQ咨询客服获取。
-
-
+## Directory Structure
 
 ## 目录说明
 
@@ -44,41 +42,24 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 
 
-## 内容说明
+## Content Descriptions
 
-0-Specifications
+**0-Specifications**  
+Quickly understand product features and performance through datasheets.  
 
-通过规格书可以快速了解产品的特性和性能。
+**1-SDK**  
+Software source code.  
+Contact technical support for functional customization.  
 
+**2-Image**  
+Update the motherboard system via flashing images. Refer to the "Image Flashing" section for details.  
 
+**3-SoftwareData**  
+Software-related resources, including code examples and patches.  
 
-1-SDK
+**4-HardwareData**  
+Hardware-related resources, such as schematics.  
 
-软件源码
-
-功能定制请联系技术支持
-
-
-
-2-Image
-
-通过烧录镜像更新主板的系统，说明见镜像烧录章节
-
-
-
-3-SoftwareData
-
-软件相关的资料，如程序例子、软件补丁等。
-
-
-
-4-HardwareData
-
-硬件相关的资料，如原理图等。
-
-
-
-5-DevelopmentTool
-
-烧录调试相关工具，如烧录软件、ADB软件等。
+**5-DevelopmentTools**  
+Flashing and debugging tools, e.g., burning software, ADB tools.
 
