--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -36,6 +36,8 @@ Set to **115200**.
 - Black: GND  
 - Red: VCC (do not connect)  
 
+![image-20241231145656021](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
+
 **K2B DEBUG Pins**  
 ![image-20250426173419507](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173419507.png)  
 
@@ -59,3 +61,4 @@ Set to **115200**.
 ```bash
 adb --version  # Verify installation
 ```
+
