--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -38,13 +38,18 @@ Set to **115200**.
 
 ![image-20241231145656021](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
 
-**K2B DEBUG Pins**  
+**K2B DEBUG Pins** 
 ![image-20250426173419507](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173419507.png)  
 
-**K2C DEBUG Pins**  
+![image-20250426173855683](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173855683.png)
+
+**K2C DEBUG Pins** 
 ![image-20250426173450995](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173450995.png)  
 
+![image-20250426173834282](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173834282.png)
+
 ### UART Software Setup (MobaXterm)  
+
 1. Create a serial session.  
 2. Select COM port and set baud rate to **115200**.  
 ![image-20250509173628697](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509173628697.png)  
