--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -1,12 +1,12 @@
-# 02-快速使用
+# 02-Quick Start
 
-本指南旨在帮助用户快速上手使用主板，包含板卡上电、显示屏连接、调试串口、ADB 、SSH 连接等内容。
+This guide is designed to help users quickly get started with the motherboard, including board power-on, display connection, debug serial port, ADB, SSH connection, and other contents.
 
 
 
-## 板卡上电
+## Board Power-on
 
-### 供电方式
+### Power Supply Methods
 
 **K2B**
 
