--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -10,14 +10,14 @@ This guide is designed to help users quickly get started with the motherboard, i
 
 **K2B**
 
-K2B 支持TYPE-C 5V 供电，如下图所示：
+K2B supports TYPE-C 5V power supply, as shown in the following figure:
 
 
 ![image-20250426165041732](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426165041732.png)
 
 **K2C**
 
-K2B 支持DC 12V 供电，如下图所示：
+K2C supports DC 12V power supply, as shown in the following figure:
 
 ![image-20250426165015167](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426165015167.png)
 
