--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -21,15 +21,12 @@ K2C supports DC 12V power supply, as shown in the following figure:
 
 ![image-20250426165015167](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426165015167.png)
 
-### LED状态
-
-开发板配备两个LED灯，默认状态下，绿色LED为电源指示灯，蓝色LED为心跳指示灯
-
-电源指示灯上电即长亮，心跳灯内核启动后持续闪烁。
-
-通过两个LED灯的状态，可初步判断开发板运行的状态。
-
-若电源指示灯不亮则检查电源部分异常，若心跳指示灯不闪烁则系统运行异常。
+### LED Status  
+- **Green LED**: Power indicator (steady on when powered).  
+- **Blue LED**: Heartbeat indicator (blinks after kernel boot).  
+- Troubleshooting:  
+  - No green light: Check power supply.  
+  - No blue light blinking: System malfunction.  
 
 
 
