--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -30,9 +30,9 @@ K2C supports DC 12V power supply, as shown in the following figure:
 
 
 
-## 显示屏
+## Display
 
-主板支持HDMI显示
+Supports HDMI output:
 
 ![image-20250426171612371](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426171612371.png)
 
