--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -44,14 +44,14 @@ Supports HDMI output:
 
 Set to **115200**.
 
-### 调试串口线说明
+### Cable Wiring
 
 目前提供的调试串口线共有四根线，各线功能如下：
 
-- 红色：VCC（不需要连接）
-- 绿色：TX
-- 白色：RX
-- 黑色：GND
+- Green: TX  
+- White: RX  
+- Black: GND  
+- Red: VCC (do not connect)
 
 其他调试工具线的连接方式同理，只需连接 TX、RX、GND 即可，且调试工具需支持 115200波特率才能正常通信。调试串口线详情见下图：
 
