--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -53,11 +53,9 @@ Set to **115200**.
 - Black: GND  
 - Red: VCC (do not connect)
 
-其他调试工具线的连接方式同理，只需连接 TX、RX、GND 即可，且调试工具需支持 115200波特率才能正常通信。调试串口线详情见下图：
-
 ![image-20241231145656021](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
 
-### 板卡DEBUG引脚
+### Board DEBUG Pins
 
 **K2B**
 
@@ -73,7 +71,7 @@ Set to **115200**.
 
 ![image-20250426173834282](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250426173834282.png)
 
-### 接线方法
+### Wiring Method
 
 **K2B**
 
