--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -85,9 +85,9 @@ Set to **115200**.
 
 
 
-### 串口助手软件下载与使用
+### Serial Port Assistant Software Download and Use
 
-**下载串口助手软件**
+**Download Serial Port Assistant Software**
 
 串口助手软件 可自行下载，下面以Mobaxterm为例
 
