--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -89,7 +89,7 @@ Set to **115200**.
 
 **Download Serial Port Assistant Software**
 
-串口助手软件 可自行下载，下面以Mobaxterm为例
+The serial port assistant software can be downloaded by yourself. Take Mobaxterm as an example below.
 
 网盘路径：
 
@@ -97,7 +97,7 @@ Set to **115200**.
 h618_data\5-DevelopmentTools\UART_DebugTool\MobaXterm_Portable_v20.3.zip
 ```
 
-软件官网下载：https://mobaxterm.mobatek.net/
+Software official website download:https://mobaxterm.mobatek.net/
 
 
 
