--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -103,11 +103,11 @@ Software official website download:https://mobaxterm.mobatek.net/
 
 **Mobaxterm操作步骤**
 
-1. 新建会话窗口
-2. 选择会话窗口类型为serial
-3. 选择串口COM编号（打开Windows系统 设备管理器 -> 端口界面可查看COM编号）
-4. 选择串口波特率 **115200**
-5. 启动会话窗口
+1. Create a new session window.
+2. Select the session window type as "serial".
+3. Select the serial port COM number (open the Windows Device Manager -> Ports interface to view the COM number).
+4. Select the serial port baud rate as 115200.
+5. Start the session window.
 
 ![image-20250509173628697](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509173628697.png)
 
