--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -113,18 +113,17 @@ Software official website download:https://mobaxterm.mobatek.net/
 
 ## ADB
 
-ADB（Android Debug Bridge）是安卓系统开发调试桥接工具，支持通过 USB 或网络连接设备，可实现应用安装、文件传输、命令执行等设备管理与调试操作。
+ADB (Android Debug Bridge) is a debugging bridge tool for the Android system, which supports connecting to devices via USB or network, and can realize device management and debugging operations such as application installation, file transfer, and command execution.
 
 
 
-### 调试线与接口
+### Debug Cable and Interface
 
-- 调试线：使用 USB TYPE - C 数据线。
-- 调试接口：主板的 USB TYPE - C 接口。
+- Debug cable: Use a USB TYPE-C data cable.
+- Debug interface: The USB TYPE-C interface of the motherboard.
 
-使用 TYPE - C 数据线连接电脑和板卡，设备管理器识别如下设备则正常，
+Connect the computer and the board with a TYPE-C data cable. If the following device is recognized in the Device Manager, it is normal. If not, try changing the computer's USB port or the data cable first.
 
-无法识别则优先尝试换一个电脑USB口或换一条数据线
 
 ![image-20250509185304921](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509185304921.png)
 
