--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -127,11 +127,11 @@ Connect the computer and the board with a TYPE-C data cable. If the following de
 
 ![image-20250509185304921](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509185304921.png)
 
-### ADB 工具获取与安装
+### ADB Tool Acquisition and Installation
 
-**工具获取**
+**Tool Acquisition**
 
-ADB软件工具从KICKPI网盘中获取，Windows平台使用，位于网盘目录
+The ADB software tool can be obtained from the KICKPI network disk, for Windows platform, located in the network disk directory:
 
 ``` 
 h618_data\5-DevelopmentTools\ADB_Tool\adb-tools.rar
