--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -139,22 +139,22 @@ h618_data\5-DevelopmentTools\ADB_Tool\adb-tools.rar
 
 
 
-**安装步骤**
+**Installation Steps**
 
-1. 解压 `adb - tools.rar` 压缩包，如解压到 `D:\ADB Tool\adb - tools` 路径。
-2. 打开命令行窗口，切换到解压目录：
+1. Unzip the adb-tools.rar compressed package, for example, to the path D:\ADB Tool\adb-tools.
+2. Open the command line window and switch to the unzip directory:
 
 ```
 ADB$ cd D:\ADB Tool\adb-tools
 ```
 
-3. 运行命令，运行成功代表安装成功
+3. Run the command. A successful run indicates a successful installation.
 
 ```
 ADB$ adb --version
 ```
 
-示例：
+Example:
 
 ```
 PS D:\ADB Tool\adb-tools> .\adb.exe --version
