--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -163,13 +163,13 @@ Version 4797878
 Installed as D:\ADB Tool\adb-tools\adb.exe
 ```
 
-### ADB调试
+### ADB Debugging
 
 ![image-20250509185455550](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509185455550.png)
 
 ## SSH
 
-SSH（Secure Shell）是一种[网络协议](https://so.csdn.net/so/search?q=网络协议&spm=1001.2101.3001.7020)，用于在不安全的网络上建立安全的远程连接。它提供了加密和身份验证机制，以确保数据的保密性和完整性。通过SSH，用户可以安全地管理远程服务器、传输文件和访问远程资源。
+SSH (Secure Shell) is a network protocol used to establish a secure remote connection on an insecure network. It provides encryption and authentication mechanisms to ensure the confidentiality and integrity of data. Through SSH, users can securely manage remote servers, transfer files, and access remote resources.
 
 板卡连接网络，通过串口或路由器后台查看板卡IP
 
