--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -171,9 +171,9 @@ Installed as D:\ADB Tool\adb-tools\adb.exe
 
 SSH (Secure Shell) is a network protocol used to establish a secure remote connection on an insecure network. It provides encryption and authentication mechanisms to ensure the confidentiality and integrity of data. Through SSH, users can securely manage remote servers, transfer files, and access remote resources.
 
-板卡连接网络，通过串口或路由器后台查看板卡IP
+Connect the board to the network and view the board's IP address through the serial port or the router's background.
 
-**开发板启动后查看IP地址有三种方法：**
+**There are three ways to view the IP address after the development board starts:：**
 
 1. **接HDMI显示器，然后登录系统使用ifconfig eth0命令查看IP地址**
 2. **在调试串口终端输入ifconifg eth0命令来查看IP地址**
