--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -175,9 +175,9 @@ Connect the board to the network and view the board's IP address through the ser
 
 **There are three ways to view the IP address after the development board starts:：**
 
-1. **接HDMI显示器，然后登录系统使用ifconfig eth0命令查看IP地址**
-2. **在调试串口终端输入ifconifg eth0命令来查看IP地址**
-3. **如果没有调试串口，也没有HDMI显示器，还可以通过路由器的管理界面来查看开发板网口的IP地址。不过这种方法经常有人会无法正常看到开发板的IP地址。如果看不到，调试方法如下所示：**
+1. **Connect an HDMI monitor, log in to the system, and use the ifconfig eth0 command to view the IP address.**
+2. **Enter the ifconfig eth0 command in the debug serial port terminal to view the IP address.**
+3. **If there is no debug serial port or HDMI monitor, you can also view the IP address of the development board's network port through the router's management interface. However, many people often cannot see the development board's IP address normally using this method. If you cannot see it, the debugging methods are as follows:**
 
 1. **首先检查Linux系统是否已经正常启动，如果开发板的蓝灯闪烁了，一般是正常启动了，否则说明系统都没正常启动；**
 2. **检查网线有没有插紧，或者换根网线试下；**
