--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -179,10 +179,10 @@ Connect the board to the network and view the board's IP address through the ser
 2. **Enter the ifconfig eth0 command in the debug serial port terminal to view the IP address.**
 3. **If there is no debug serial port or HDMI monitor, you can also view the IP address of the development board's network port through the router's management interface. However, many people often cannot see the development board's IP address normally using this method. If you cannot see it, the debugging methods are as follows:**
 
-1. **首先检查Linux系统是否已经正常启动，如果开发板的蓝灯闪烁了，一般是正常启动了，否则说明系统都没正常启动；**
-2. **检查网线有没有插紧，或者换根网线试下；**
-3. **换个路由器试下（路由器的问题有遇到过很多，比如路由器无法正常分配IP地址，或者已正常分配IP地址但在路由器中看不到）；**
-4. **如果没有路由器可换就只能连接HDMI显示器或者使用调试串口来查看IP地址。**
+1. **First, check whether the Linux system has started normally. If the blue light of the development board is flashing, it usually means the system has started normally; otherwise, the system has not started normally.**
+2. **Check whether the network cable is plugged in tightly, or try replacing the network cable.**
+3. **Try replacing the router (many problems with routers have been encountered, such as the router being unable to assign an IP address normally, or having assigned an IP address normally but not being visible in the router).**
+4. **If there is no router to replace, you can only connect an HDMI monitor or use the debug serial port to view the IP address.**
 
 
 
