--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -185,14 +185,13 @@ Connect the board to the network and view the board's IP address through the ser
 4. **If there is no router to replace, you can only connect an HDMI monitor or use the debug serial port to view the IP address.**
 
 
+**In addition, it should be noted that the development board's DHCP automatic IP address allocation does not require any settings.**
 
-**另外需要注意的是开发板DHCP自动分配IP地址是不需要任何设置的。**
+### User Information
 
-### 用户信息
+The default username and password are as follows:
 
-默认用户名和密码如下：
-
-| 系统   | 用户名 | 密码   |
+| System   | Username | Password   |
 | ------ | ------ | ------ |
 | Ubuntu | kickpi | kickpi |
 | Ubuntu | root   | root   |
