--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -198,14 +198,14 @@ The default username and password are as follows:
 
 ``` shell
 ssh kickpi@<ip>
-密码kickpi
+Password: kickpi
 ```
 
-**注意事项**
+**Precautions**
 
-- 确保主板网络连接正常。
-- 确保电脑能够正常 ping 通主板的 IP 地址。
-- 确保输入的用户名和密码存在且正确。
+- Ensure that the motherboard's network connection is normal.
+- Ensure that the computer can ping the motherboard's IP address normally.
+- Ensure that the entered username and password exist and are correct.
 
 ![image-20250411103217477](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250411103217477.png)
 
