--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -213,9 +213,9 @@ Password: kickpi
 
 ## FAQ
 
-### 上电供电问题
+### Power Supply Issues
 
-当主板接入较多外设，导致功耗较高时，接入电源后，上电绿灯可能会较暗或不能保持常亮，系统启动也可能出现异常。
+When the motherboard is connected to many peripherals, resulting in high power consumption, after connecting the power supply, the power-on green light may be dim or not remain on, and the system startup may also be abnormal.
 
 **解决方案**：这一般是电源供电问题，请检测对应电源的功耗是否足够，能否支持所连接的外设模块供电。
 
