--- a/h618/en/02-Getting Started Guide/02-快速使用.md
+++ b/h618/en/02-Getting Started Guide/02-快速使用.md
@@ -217,17 +217,17 @@ Password: kickpi
 
 When the motherboard is connected to many peripherals, resulting in high power consumption, after connecting the power supply, the power-on green light may be dim or not remain on, and the system startup may also be abnormal.
 
-**解决方案**：这一般是电源供电问题，请检测对应电源的功耗是否足够，能否支持所连接的外设模块供电。
+**Solution**：This is generally a power supply problem. Please check whether the power consumption of the corresponding power supply is sufficient and whether it can support the power supply of the connected peripheral modules.
 
 
 
-### ADB设备无法识别
+### ADB Device Not Recognized
 
-进行ADB调试时，等板卡蓝灯闪烁时查看系统设备管理器是否识到是如下设备，
+When debugging ADB, check whether the following device is recognized in the System Device Manager when the board's blue light is flashing.
 
 ![image-20250509185304921](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250509185304921.png)
 
-如果识别到的是未知设备，如图所示则需手动安装驱动
+If an unknown device is recognized, as shown in the figure, you need to manually install the driver.
 
 ![image-20250226152046272](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250226152046272.png)
 
