--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -1,22 +1,22 @@
-# 03-功能测试
+# 03-Function Testing
 
 
 
-## 说明
+## Instructions
 
-未做区分说明，则测试方法在Ubuntu和安卓系统上都适用
+Unless otherwise specified, the testing methods are applicable to both Ubuntu and Android systems.
 
 
 
-## 以太网
+## Ethernet
 
-板卡网口连接网线
+Connect the board's network port to a network cable.
 
-**K2B：100M/1000M网口**
+**K2B: 100M/1000M network port**
 
 ![image-20250427144337458](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427144337458.png)
 
-​									左边网口灯亮说明是100M连接,右边网口灯亮说明是1000M连接
+​									The left network port light being on indicates a 100M connection, and the right one being on indicates a 1000M connection.
 
 **K2C：100M网口**
 
