--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -16,7 +16,7 @@ Connect the board's network port to a network cable.
 
 ![image-20250427144337458](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427144337458.png)
 
-​									The left network port light being on indicates a 100M connection, and the right one being on indicates a 1000M connection.
+The left network port light being on indicates a 100M connection, and the right one being on indicates a 1000M connection.
 
 **K2C：100M网口**
 
