--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -18,21 +18,18 @@ Connect the board's network port to a network cable.
 
 The left network port light being on indicates a 100M connection, and the right one being on indicates a 1000M connection.
 
-**K2C：100M网口**
+**K2C: 100M network port**
 
-K2C无网口灯
+K2C has no network port lights.
 
-可通过路由器后台或串口终端查看板卡IP
-
+You can view the board's IP address through the router background or the serial port terminal.
 ![image-20250412164019949](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250412164019949.png)
 
 
 
-**用户层控制LED状态**
+**User-layer LED Status Control**
 
-默认LED触发方式为heartbeat，此方式下LED状态不可人为控制。
-
-若想要实现命令控制LED状态的话，可通过以下命令设置为none，然后再设置LED的brightness
+The default LED trigger mode is "heartbeat", in which the LED status cannot be manually controlled. To enable command-based LED status control, use the following commands to set the trigger mode to "none" and then adjust the brightness:
 
 ```shell
 echo none > /sys/class/leds/sys_led/trigger
