--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -37,18 +37,18 @@ echo 1 > /sys/class/leds/sys_led/brightness
 echo 0 > /sys/class/leds/sys_led/brightness
 ```
 
-## IR红外
+## IR Infrared
 
 **Android**
 
-使用遥控可对主界面进行控制
+Use a remote control to operate the main interface.
 
 **Ubuntu**
 
 ``` shell
 cat /proc/bus/input/devices
 hexdump /dev/input/event0
-按下遥控，有事件上报
+Press the remote control and check for event reports.
 ```
 
 ![image-20250412151436282](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250412151436282.png)
