--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -55,15 +55,15 @@ Press the remote control and check for event reports.
 
 ## HDMI
 
-**Android系统**
+**Android System**
 
-主板连接HDMI-1080P显示器，系统启动成功后，界面如下
+Connect the motherboard to an HDMI-1080P monitor. After the system starts successfully, the interface is as follows:
 
 ![image-20240306171855522](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306171855522.png)
 
-**Ubuntu系统**
+**Ubuntu System**
 
-板卡接入HDMI-1080P显示器，进入系统显示如下画面
+Connect the board to an HDMI-1080P monitor. The system display is as follows when booting:
 
 ![image-20250412150306655](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250412150306655.png)
 
