--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -69,11 +69,11 @@ Connect the board to an HDMI-1080P monitor. The system display is as follows whe
 
 
 
-## 音频
+## Audio
 
 **Android**
 
-耳机音频输出默认关闭，Android12.0系统设置中开启模拟音频输出
+Headphone audio output is disabled by default. Enable analog audio output in Android 12.0 system settings:
 
 ![image-20250428151212987](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250428151212987.png)
 
@@ -87,9 +87,9 @@ Connect the board to an HDMI-1080P monitor. The system display is as follows whe
 
 **Ubuntu**
 
-桌面播放
+Desktop Playback
 
-需使用具有扬声器的HDMI屏幕
+Requires an HDMI screen with built-in speakers.
 
 ``` shell
 cd /bin
