--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -100,11 +100,11 @@ sudo apt install pulseaudio
 reboot
 ```
 
-右上角音量输出控制选择第二个为HDM输出，第一个为耳机输出
+Select the second option for HDMI output and the first for headphone output in the volume control menu at the top right corner.
 
 ![image-20250427194148974](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250427194148974.png)
 
-命令行播放
+Command-line Playback
 
 ``` shell
 $ aplay <filepath>  //播放音频  -h 查看使用方法
