--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -107,10 +107,9 @@ Select the second option for HDMI output and the first for headphone output in t
 Command-line Playback
 
 ``` shell
-$ aplay <filepath>  //播放音频  -h 查看使用方法
-$ amixer //Alsa工具，用于配置音频的各个参数。 -h 查看使用方法
-查看声卡
-$ cat /proc/asound/cards
+$ aplay <filepath>  # Play audio, use -h for help
+$ amixer # Alsa tool for audio configuration, use -h for help
+$ cat /proc/asound/cards # List sound cards
 ```
 
 K2B
