--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -107,20 +107,20 @@ Select the second option for HDMI output and the first for headphone output in t
 Command-line Playback
 
 ``` shell
-$ aplay <filepath>  # Play audio, use -h for help
-$ amixer # Alsa tool for audio configuration, use -h for help
-$ cat /proc/asound/cards # List sound cards
+$ aplay <filepath> 		 # Play audio, use -h for help
+$ amixer 				 # Alsa tool for audio configuration, use -h for help
+$ cat /proc/asound/cards  # List sound cards
 ```
 
 K2B
 
 ``` shell
-HDMI输出
+HDMI output:
 aplay -D hw:0,0 music.wav
 ```
 
 ``` shell
-耳机输出
+Headphone output:
 aplay -D hw:1,0 music.wav
 ```
 
