--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -127,12 +127,12 @@ aplay -D hw:1,0 music.wav
 K2C
 
 ``` shell
-HDMI输出
+HDMI output:
 aplay -D hw:2,0 music.wav
 ```
 
 ``` shell
-耳机/喇叭输出
+Headphone/speaker output:
 aplay -D hw:1,0 music.wav
 ```
 
@@ -149,7 +149,7 @@ aplay -D hw:1,0 music.wav
 WiFi
 
 ```shell
-查看网络设备列表
+# View network device list
 sudo nmcli dev
 
 开启wifi
