--- a/h618/en/02-Getting Started Guide/03-功能测试.md
+++ b/h618/en/02-Getting Started Guide/03-功能测试.md
@@ -152,16 +152,16 @@ WiFi
 # View network device list
 sudo nmcli dev
 
-开启wifi
+# Enable WiFi
 sudo nmcli r wifi on
 
-关闭wifi
+# Disable WiFi
 sudo nmcli r wifi off
 
-扫描附件热点
+# Scan nearby hotspots
 sudo nmcli dev wifi
 
-连接 用户 SSID 密码的 PASSWORD 的热点 (其他热点修改对应用户及密码)
+# Connect to a hotspot (replace SSID and PASSWORD)
 sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
 ```
 
@@ -169,14 +169,14 @@ sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
 
 **Bluetooth**
 
-1.安装蓝牙工具
+1.Install Bluetooth Tools
 
 ```shell
 $ sudo apt-get update
 $ sudo apt-get install bluez
 ```
 
-2.查看蓝牙节点
+2.Check Bluetooth Devices
 
 ```shell
 $ hciconfig -a  
